[package]
name = "rover-controller-app-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
glam = "0.20.2"
glutin = "0.28.0"
glium = "0.31.0"
egui = "0.17.0"
egui_glium = "0.17.0"
csv = "1.1.6"